# Jimini

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_RUNBOOK.md  ARCHITECTURE.md  CHANGELOG.md  DASHBOARD_INTEGRATION_README.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FULL_JIMINI_PLATFORM_INTEGRATION.md  INTEGRATION_COMPLETE.md  Jimini_Pitch.pptx  LICENSE  MANIFEST.in  NEXT_HORIZONS_PHASES_6_8.md  PHASE3.md  PHASE_1_SUCCESS.md  PHASE_2A_SUCCESS.md  PHASE_2B_SUCCESS.md  PHASE_2C_SUCCESS.md  PHASE_3_SUCCESS.md  PHASE_4C_COMPLETION.md  PHASE_4D_COMPLETE.md  PHASE_4D_COMPLETION.md  PHASE_4D_PLAN.md  PHASE_4E_COMPLETION.md  PHASE_4E_PLAN.md  PHASE_4F_PLAN.md  PHASE_4_AUDIT_ENHANCED.md  PHASE_4_GLOBAL_PLATFORM_VICTORY.md  PHASE_4_HARDENING_CHECKLIST_COMPLETE.md  PHASE_5_GLOBAL_TRUST_FABRIC_VICTORY.md  PHASE_5_OPERATIONAL_EXCELLENCE_COMPLETE.md  PHASE_6A_IMPLEMENTATION_SUMMARY.md  PHASE_6B_COMPLETION.md  Phase_4F_Test_Coverage_Report.md  REACT_FLASK_DASHBOARD_GUIDE.md  REACT_FLASK_INTEGRATION.md  (+76 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml
.venv-1/: pyvenv.cfg
app/: __version__.py  audit.py  audit_logger.py  config.py  continuous_improvement.py  crypto.py  data_privacy.py  enforcement.py  main.py  main_mvp.py  models.py  notifier.py  observability.py  operational_guardrails.py  otel.py  rbac.py  redact.py  resilience.py  risk.py  router.py  rules_loader.py  security_middleware.py  telemetry.py  util.py
app/forwarders/: __init__.py  base.py  elastic_forwarder.py  jsonl_forwarder.py  splunk_forwarder.py
app/intelligence/: __init__.py  api.py  config.py  regulatory_parser.py  reinforcement_learning.py  risk_api.py
config/: loader.py
design/: phase_8_autonomous_evolution.py
docs/: PHASE-4-SUMMARY.md  SECURITY-COMPLIANCE.md
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
jimini.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jimini_cli/: __init__.py  __main__.py  loader.py  main.py
jimini_cli.egg-info/: SOURCES.txt
logs/: audit-2025-08-07.jsonl  audit-2025-08-11.jsonl  audit-2025-08-12.jsonl  audit-2025-08-14.jsonl  audit-2025-09-15T21:35:37+00:00.bak  audit.jsonl  final_mission_report.json  jimini_events.jsonl  phase_7_rl_demo_report.json  risk_history.db
packs/secrets/: v1.yaml
production_config/: .env.template  DEPLOYMENT.md  docker-compose.yml  nginx.conf  production_config.json  production_rules.yaml
replit-deployment/: .replit  main.py
replit-deployment/app/: circuit_breaker.py  config.py  crypto.py  deadletter.py  main_simple.py  models.py  notifier.py  otel.py  pii_redactor.py  redaction.py  risk.py  rules_loader.py  shadow_integration.py  util.py
replit-deployment/app/forwarders/: __init__.py
replit-deployment/app/intelligence/: policy_recommendations.py  policy_recommendations_api.py  predictive_intelligence.py  predictive_intelligence_api.py  reinforcement_learning_api.py  risk_scoring.py.backup
replit-deployment/packs/cjis/: v1.yaml
replit-deployment/packs/government/: v1.yaml  v1_fixed.yaml
replit-deployment/packs/hipaa/: v1.yaml
replit-deployment/packs/illinois/: v1.yaml
replit-deployment/packs/pci/: v1.yaml
replit-deployment/packs/secrets/: v1.yaml
scripts/: audit_load_test.py  deploy_production.sh  docker_test.sh  evolution_status.py  final_mission_report.py  generate_ppt.py  integration_test.sh  intelligence_demo.py  phase_4_summary.py  phase_6b_demo.py  phase_6c_demo.py  phase_6d_demo.py  phase_7_demo.py  risk_scoring_demo.py  risk_scoring_demo_simple.py  setup_dev.sh  test_phase_4a.py  test_phase_4c.py  test_phase_4g.py  verify_codebase.py
tests/: test_audit_chain_validation.py  test_basic.py  test_basic.py (create)  test_circuit_breaker_corrected.py  test_cli.py  test_concurrency.py  test_config.py  test_configuration_features.py  test_enforcement.py  test_event_schema.py  test_forwarder_jsonl.py  test_forwarders.py  test_notifier.py  test_phase5_operational_excellence.py  test_phase_4b_resilience.py  test_policy_recommendations.py  test_predictive_intelligence.py  test_regulatory_parser.py  test_reinforcement_learning.py  test_risk_scoring.py  test_security_features.py  test_server_integration.py  test_shadow_override.py  test_shadow_overrides.py  test_telemetry.py  test_telemetry_counters.py
